# dcp-vardis

./: README.md
dcp-vardis-project/: README.md  RELEASE.md
dcp-vardis-project/dcpimplementation/: README.md
dcp-vardis-project/dcpimplementation/src/: CMakeLists.txt  doxygen.config  rpi-setup-wlan0.sh  setalias.sh  start-dcp-node.sh  write-test-configs.pl
dcp-vardis-project/dcpimplementation/src/dcp/applications/: srpapp-display-neighbour-table.cc  srpapp-test-generate-sd.cc  vardisapp-delete-variable.cc  vardisapp-describe-variable.cc  vardisapp-list-variables.cc  vardisapp-test-consumer.cc  vardisapp-test-producer.cc  vardisapp-test-variabletype.h
dcp-vardis-project/dcpimplementation/src/dcp/bp/: bp_client_protocol_data.cc  bp_client_protocol_data.h  bp_client_static_info.cc  bp_client_static_info.h  bp_configuration.cc  bp_configuration.h  bp_logging.cc  bp_logging.h  bp_management_command.cc  bp_management_command.h  bp_management_payload.cc  bp_management_payload.h  bp_queueing_mode.cc  bp_queueing_mode.h  bp_receiver.cc  bp_receiver.h  bp_runtime_data.cc  bp_runtime_data.h  bp_service_primitives.cc  bp_service_primitives.h  bp_shm_control_segment.cc  bp_shm_control_segment.h  bp_transmissible_types.cc  bp_transmissible_types.h  bp_transmitter.cc  bp_transmitter.h  bpclient_configuration.h  bpclient_lib.cc  bpclient_lib.h  bpclient_lib_payload.cc
dcp-vardis-project/dcpimplementation/src/dcp/common/: area.h  array_avl_tree.h  command_socket.cc  command_socket.h  configuration.cc  configuration.h  debug_helpers.cc  debug_helpers.h  exceptions.h  fixedmem_avl_tree.h  fixedmem_ring_buffer.h  foundation_types.h  global_types_constants.cc  global_types_constants.h  logging_helpers.cc  logging_helpers.h  memblock.h  other_helpers.cc  other_helpers.h  ring_buffer.h  services_status.cc  services_status.h  shared_mem_area.cc  shared_mem_area.h  sharedmem_configuration.cc  sharedmem_configuration.h  sharedmem_finite_queue.h  sharedmem_structure_base.cc  sharedmem_structure_base.h  transmissible_type.h
dcp-vardis-project/dcpimplementation/src/dcp/main/: bp_main.cc  srp_main.cc  vardis_main.cc
dcp-vardis-project/dcpimplementation/src/dcp/srp/: srp_configuration.cc  srp_configuration.h  srp_constants.h  srp_logging.cc  srp_logging.h  srp_receiver.cc  srp_receiver.h  srp_runtime_data.h  srp_scrubber.cc  srp_scrubber.h  srp_store_fixedmem.h  srp_store_fixedmem_shm.h  srp_store_interface.h  srp_transmissible_types.cc  srp_transmissible_types.h  srp_transmitter.cc  srp_transmitter.h  srpclient_configuration.cc  srpclient_configuration.h  srpclient_lib.cc  srpclient_lib.h
dcp-vardis-project/dcpimplementation/src/dcp/vardis/: vardis_client_protocol_data.cc  vardis_client_protocol_data.h  vardis_configuration.cc  vardis_configuration.h  vardis_constants.h  vardis_logging.cc  vardis_logging.h  vardis_management_command.cc  vardis_management_command.h  vardis_management_rtdb.cc  vardis_management_rtdb.h  vardis_protocol_data.cc  vardis_protocol_data.h  vardis_protocol_statistics.cc  vardis_protocol_statistics.h  vardis_receiver.cc  vardis_receiver.h  vardis_rtdb_entry.h  vardis_runtime_data.h  vardis_scrubber.cc  vardis_scrubber.h  vardis_service_primitives.cc  vardis_service_primitives.h  vardis_shm_control_segment.h  vardis_store_array.h  vardis_store_array_inmemory.h  vardis_store_array_shm.h  vardis_store_interface.h  vardis_transmissible_types.cc  vardis_transmissible_types.h  vardis_transmitter.cc  vardis_transmitter.h  vardis_variable_store_array.h  vardis_variable_store_array_shm.h  vardisclient_configuration.cc  vardisclient_configuration.h  vardisclient_lib.cc  vardisclient_lib.h  vardisclient_lib_rtdb.cc
dcp-vardis-project/dcpimplementation/src/test/bp/: bp_client_sharedmem_test.cc
dcp-vardis-project/dcpimplementation/src/test/common/: avl_tree.cc  command_socket_test.cc  miscellaneous_test.cc  serialization_area_test.cc  shared_mem_area_test.cc  transmissible_types_test.cc
dcp-vardis-project/dcpimplementation/src/test/vardis/: vardis_protocol_data_test.cc  vardis_transmissible_types_test.cc
dcp-vardis-project/dcpsimulation/: CONTRIBUTORS.md  README.md  WHATSNEW.md  makefrag  setalias.sh
dcp-vardis-project/dcpsimulation/simulations/: omnetpp.ini  package.ned
dcp-vardis-project/dcpsimulation/src/: package.ned
dcp-vardis-project/specification/: Makefile  README.md  dcp-architecture.md  dcp-bp.md  dcp-changelog.md  dcp-context.md  dcp-datatypes.md  dcp-issues.md  dcp-srp.md  dcp-vardis.md  dcp-version-contributors.md  frontmatter.md
simulation-code-paper/: readme.md
simulation-code-paper/SwarmStack/: Readme.md
simulation-code-paper/SwarmStack/simulations/: omnetpp.ini  package.ned
simulation-code-paper/SwarmStack/src/: PoissonNetwork.ned  RenewalBeaconingNetwork.ned  RenewalBeaconingNetworkSafety.ned  SwarmNetwork.ned  SwarmNetworkLBP.ned  SwarmNode.ned  SwarmNodeLBP.ned  package.ned
simulation-code-paper/SwarmStack/src/base/: SwarmStackBase.cc  SwarmStackBase.h
simulation-code-paper/SwarmStack/src/flooding/: Flooding.cc  Flooding.h  Flooding.ned  FloodingHeader.msg
simulation-code-paper/SwarmStack/src/glenorchy/: FloodingNetworkGrid.ned  FloodingNetworkTest.ned  FloodingNode.ned  FloodingSink.ned  FloodingSource.ned  GlenorchyPacketSink.cc  GlenorchyPacketSink.h  GlenorchyPacketSink.ned
simulation-code-paper/SwarmStack/src/lbp/: AdhocLBPHost.ned  ILbpClient.ned  LBPClientBase.cc  LBPClientBase.h  LocalBroadcastHeader.msg  LocalBroadcastProtocol.cc  LocalBroadcastProtocol.h  LocalBroadcastProtocol.ned
simulation-code-paper/SwarmStack/src/sourcesink/: GenericPacketSink.cc  GenericPacketSink.h  GenericPacketSink.ned  IPacketSink.ned  (+14 more)
simulation-code-paper/srp_vardis/simulations/: package.ned
simulation-code-paper/srp_vardis/src/: Drone.ned  SRP.cc  SRP.h  SRP.ned  SRPVarDisBeaconing.cc  SRPVarDisBeaconing.h  SRPVarDisBeaconing.ned  package.ned  srp_vardis_config.h
spec-v1.0/: Makefile  README.md  dcp-bp.md  dcp-changelog.md  dcp-context.md  dcp-datatypes.md  dcp-issues.md  dcp-srp.md  dcp-vardis.md  dcp-version-contributors.md  frontmatter.md
(+251 files in other folders)
